--- a/archives/toutiao-search/2024-03-08.md
+++ b/archives/toutiao-search/2024-03-08.md
@@ -1,58 +1,71 @@
 # 2024-03-08
 
-共 331 条
+共 338 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 08 2024 22:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Mar 08 2024 23:00:42 GMT+0800 (China Standard Time) -->
 1. [印度在中印边境新增1万士兵？中方回应](https://so.toutiao.com/search?keyword=印度在中印边境新增1万士兵？中方回应)
-1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
-1. [让每一个“她”破浪前行](https://so.toutiao.com/search?keyword=让每一个“她”破浪前行)
-1. [拜登国情咨文演讲被打断](https://so.toutiao.com/search?keyword=拜登国情咨文演讲被打断)
 1. [金价一路涨 有人连夜变现289万元](https://so.toutiao.com/search?keyword=金价一路涨+有人连夜变现289万元)
-1. [人大代表谈我军军事训练转型升级](https://so.toutiao.com/search?keyword=人大代表谈我军军事训练转型升级)
+1. [让每一个“她”破浪前行](https://so.toutiao.com/search?keyword=让每一个“她”破浪前行)
 1. [代表：要让电动汽车充次电跑1000公里](https://so.toutiao.com/search?keyword=代表：要让电动汽车充次电跑1000公里)
-1. [外交部对鸟山明去世表示哀悼](https://so.toutiao.com/search?keyword=外交部对鸟山明去世表示哀悼)
 1. [杭州小伙买100万黄金一年赚50%](https://so.toutiao.com/search?keyword=杭州小伙买100万黄金一年赚50%)
 1. [打破“一人逃亡全家得利”迷梦](https://so.toutiao.com/search?keyword=打破“一人逃亡全家得利”迷梦)
+1. [鸟山明漫画《龙珠》究竟讲了啥](https://so.toutiao.com/search?keyword=鸟山明漫画《龙珠》究竟讲了啥)
+1. [南京一牛肉拉面师傅强势加肉](https://so.toutiao.com/search?keyword=南京一牛肉拉面师傅强势加肉)
+1. [MEGA刚上市就被抛弃 理想凉了吗](https://so.toutiao.com/search?keyword=MEGA刚上市就被抛弃+理想凉了吗)
+1. [外交部对鸟山明去世表示哀悼](https://so.toutiao.com/search?keyword=外交部对鸟山明去世表示哀悼)
 1. [迈凯伦送修后车主发现成人用品](https://so.toutiao.com/search?keyword=迈凯伦送修后车主发现成人用品)
 1. [张学友新冠阳性 正居家隔离](https://so.toutiao.com/search?keyword=张学友新冠阳性+正居家隔离)
 1. [北汽集团辟谣将在韩国高阳建厂](https://so.toutiao.com/search?keyword=北汽集团辟谣将在韩国高阳建厂)
 1. [前央视主持李小萌演讲谈女性力量](https://so.toutiao.com/search?keyword=前央视主持李小萌演讲谈女性力量)
-1. [海燕谢广坤直播聊乡村爱情](https://so.toutiao.com/search?keyword=海燕谢广坤直播聊乡村爱情)
-1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
-1. [张志磊创下体重新高](https://so.toutiao.com/search?keyword=张志磊创下体重新高)
 1. [买房就首套时代要来了吗](https://so.toutiao.com/search?keyword=买房就首套时代要来了吗)
-1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
-1. [台名嘴谈王毅认出跳“科目三”记者](https://so.toutiao.com/search?keyword=台名嘴谈王毅认出跳“科目三”记者)
+1. [张志磊创下体重新高](https://so.toutiao.com/search?keyword=张志磊创下体重新高)
+1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
+1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
+1. [前巴萨球员“悟空”悼念鸟山明](https://so.toutiao.com/search?keyword=前巴萨球员“悟空”悼念鸟山明)
+1. [我国的脑机接口芯片国际领先](https://so.toutiao.com/search?keyword=我国的脑机接口芯片国际领先)
 1. [张纪中妻子回应42岁再怀孕](https://so.toutiao.com/search?keyword=张纪中妻子回应42岁再怀孕)
 1. [公司妇女节给女员工发馒头](https://so.toutiao.com/search?keyword=公司妇女节给女员工发馒头)
-1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
 1. [情侣40元买彩票刮出100万元大奖](https://so.toutiao.com/search?keyword=情侣40元买彩票刮出100万元大奖)
-1. [以民众抗议要求被扣押人员尽快获释](https://so.toutiao.com/search?keyword=以民众抗议要求被扣押人员尽快获释)
-1. [鸟山明漫画《龙珠》究竟讲了啥](https://so.toutiao.com/search?keyword=鸟山明漫画《龙珠》究竟讲了啥)
+1. [西方为何集体退出新能源汽车](https://so.toutiao.com/search?keyword=西方为何集体退出新能源汽车)
+1. [金龟子回应不换发型的原因](https://so.toutiao.com/search?keyword=金龟子回应不换发型的原因)
+1. [海燕谢广坤直播聊乡村爱情](https://so.toutiao.com/search?keyword=海燕谢广坤直播聊乡村爱情)
 1. [梅德韦杰夫：俄对法关系中再无红线](https://so.toutiao.com/search?keyword=梅德韦杰夫：俄对法关系中再无红线)
-1. [外长记者会没让日媒提问？中方回应](https://so.toutiao.com/search?keyword=外长记者会没让日媒提问？中方回应)
-1. [南京一牛肉拉面师傅强势加肉](https://so.toutiao.com/search?keyword=南京一牛肉拉面师傅强势加肉)
-1. [我国的脑机接口芯片国际领先](https://so.toutiao.com/search?keyword=我国的脑机接口芯片国际领先)
-1. [MEGA刚上市就被抛弃 理想凉了吗](https://so.toutiao.com/search?keyword=MEGA刚上市就被抛弃+理想凉了吗)
-1. [红海现在有多乱 还会乱多久](https://so.toutiao.com/search?keyword=红海现在有多乱+还会乱多久)
 1. [女子占道经营 车主沟通无果放大招](https://so.toutiao.com/search?keyword=女子占道经营+车主沟通无果放大招)
 1. [4名狱警殴打服刑人员致死获刑](https://so.toutiao.com/search?keyword=4名狱警殴打服刑人员致死获刑)
-1. [俄军在叙空袭击毙20多名武装分子](https://so.toutiao.com/search?keyword=俄军在叙空袭击毙20多名武装分子)
-1. [马面裙成女性新中式的顶流](https://so.toutiao.com/search?keyword=马面裙成女性新中式的顶流)
-1. [飞行汽车在广州市核心商务区实现首飞](https://so.toutiao.com/search?keyword=飞行汽车在广州市核心商务区实现首飞)
-1. [马航MH370重启搜索方案曝光](https://so.toutiao.com/search?keyword=马航MH370重启搜索方案曝光)
-1. [三星Galaxy A35 5G手机偷跑](https://so.toutiao.com/search?keyword=三星Galaxy+A35 5G手机偷跑)
-1. [台军称已改变“第一击”界定遭讽](https://so.toutiao.com/search?keyword=台军称已改变“第一击”界定遭讽)
+1. [台名嘴谈王毅认出跳“科目三”记者](https://so.toutiao.com/search?keyword=台名嘴谈王毅认出跳“科目三”记者)
 1. [鸟山明曾说没成龙《醉拳》就没龙珠](https://so.toutiao.com/search?keyword=鸟山明曾说没成龙《醉拳》就没龙珠)
+1. [比特币飙升后将会发生什么](https://so.toutiao.com/search?keyword=比特币飙升后将会发生什么)
+1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
+1. [华为P70系列延期发布？知情人回应](https://so.toutiao.com/search?keyword=华为P70系列延期发布？知情人回应)
+1. [加密货币总市值突破2.7万亿美元](https://so.toutiao.com/search?keyword=加密货币总市值突破2.7万亿美元)
+1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
+1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
+1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
+1. [马航MH370重启搜索方案曝光](https://so.toutiao.com/search?keyword=马航MH370重启搜索方案曝光)
+1. [飞行汽车在广州市核心商务区实现首飞](https://so.toutiao.com/search?keyword=飞行汽车在广州市核心商务区实现首飞)
+1. [湖南一教师与学生发生关系？学校辟谣](https://so.toutiao.com/search?keyword=湖南一教师与学生发生关系？学校辟谣)
+1. [台军称已改变“第一击”界定遭讽](https://so.toutiao.com/search?keyword=台军称已改变“第一击”界定遭讽)
+1. [日本长崎县一住宅起火致3死](https://so.toutiao.com/search?keyword=日本长崎县一住宅起火致3死)
+1. [《龙珠》作者鸟山明去世](https://so.toutiao.com/search?keyword=《龙珠》作者鸟山明去世)
+1. [拜登发表国情咨文演讲猛批特朗普](https://so.toutiao.com/search?keyword=拜登发表国情咨文演讲猛批特朗普)
+1. [马面裙成女性新中式的顶流](https://so.toutiao.com/search?keyword=马面裙成女性新中式的顶流)
+1. [红海现在有多乱 还会乱多久](https://so.toutiao.com/search?keyword=红海现在有多乱+还会乱多久)
+1. [雷军：为小米汽车上市做最后冲刺](https://so.toutiao.com/search?keyword=雷军：为小米汽车上市做最后冲刺)
+1. [男子晒自家院子种的纯天然绿色蔬菜](https://so.toutiao.com/search?keyword=男子晒自家院子种的纯天然绿色蔬菜)
+1. [外长记者会没让日媒提问？中方回应](https://so.toutiao.com/search?keyword=外长记者会没让日媒提问？中方回应)
+1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
+1. [拜登国情咨文演讲被打断](https://so.toutiao.com/search?keyword=拜登国情咨文演讲被打断)
+1. [人大代表谈我军军事训练转型升级](https://so.toutiao.com/search?keyword=人大代表谈我军军事训练转型升级)
+1. [以民众抗议要求被扣押人员尽快获释](https://so.toutiao.com/search?keyword=以民众抗议要求被扣押人员尽快获释)
+1. [俄军在叙空袭击毙20多名武装分子](https://so.toutiao.com/search?keyword=俄军在叙空袭击毙20多名武装分子)
+1. [三星Galaxy A35 5G手机偷跑](https://so.toutiao.com/search?keyword=三星Galaxy+A35 5G手机偷跑)
 1. [中国驻韩使馆提醒游客谨防强制消费](https://so.toutiao.com/search?keyword=中国驻韩使馆提醒游客谨防强制消费)
 1. [领克07 EM-P正式亮相](https://so.toutiao.com/search?keyword=领克07+EM-P正式亮相)
 1. [龙珠不会再有续集了](https://so.toutiao.com/search?keyword=龙珠不会再有续集了)
 1. [记者：国足名单真就是老外教练定的](https://so.toutiao.com/search?keyword=记者：国足名单真就是老外教练定的)
 1. [委员建议老年人在全国坐公交免费](https://so.toutiao.com/search?keyword=委员建议老年人在全国坐公交免费)
-1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
 1. [媒体：35岁就业门槛莫要讨论三五年](https://so.toutiao.com/search?keyword=媒体：35岁就业门槛莫要讨论三五年)
-1. [金龟子回应不换发型的原因](https://so.toutiao.com/search?keyword=金龟子回应不换发型的原因)
 1. [我国发现首个深水深层大油田](https://so.toutiao.com/search?keyword=我国发现首个深水深层大油田)
 1. [遭抗议者封路 拜登绕道去国会演讲](https://so.toutiao.com/search?keyword=遭抗议者封路+拜登绕道去国会演讲)
 1. [读懂政府工作报告里的未来机遇](https://so.toutiao.com/search?keyword=读懂政府工作报告里的未来机遇)
@@ -62,16 +75,11 @@
 1. [江涛用歌声致敬了不起的她](https://so.toutiao.com/search?keyword=江涛用歌声致敬了不起的她)
 1. [伊万希望中方教练成为沟通的桥梁](https://so.toutiao.com/search?keyword=伊万希望中方教练成为沟通的桥梁)
 1. [两会上的“她”力量](https://so.toutiao.com/search?keyword=两会上的“她”力量)
-1. [拜登发表国情咨文演讲猛批特朗普](https://so.toutiao.com/search?keyword=拜登发表国情咨文演讲猛批特朗普)
 1. [媒体：胡塞袭击致船员死亡令美尴尬](https://so.toutiao.com/search?keyword=媒体：胡塞袭击致船员死亡令美尴尬)
-1. [华为P70系列延期发布？知情人回应](https://so.toutiao.com/search?keyword=华为P70系列延期发布？知情人回应)
 1. [福建提及金门供水问题有何深意](https://so.toutiao.com/search?keyword=福建提及金门供水问题有何深意)
 1. [“两高”点名的贪官 有人受贿5.4亿](https://so.toutiao.com/search?keyword=“两高”点名的贪官+有人受贿5.4亿)
-1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
 1. [金壮龙：鼓励工业大省大市勇挑大梁](https://so.toutiao.com/search?keyword=金壮龙：鼓励工业大省大市勇挑大梁)
 1. [马英九批民进党不知两岸交流重要性](https://so.toutiao.com/search?keyword=马英九批民进党不知两岸交流重要性)
-1. [《龙珠》作者鸟山明去世](https://so.toutiao.com/search?keyword=《龙珠》作者鸟山明去世)
-1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
 1. [00后性别失衡加剧 适婚女性数量超男性](https://so.toutiao.com/search?keyword=00后性别失衡加剧+适婚女性数量超男性)
 1. [建议房地产推行无理由退房机制](https://so.toutiao.com/search?keyword=建议房地产推行无理由退房机制)
 1. [张连起：建议适时取消文化建设费](https://so.toutiao.com/search?keyword=张连起：建议适时取消文化建设费)
@@ -155,7 +163,6 @@
 1. [媒体：加大政策支持保障种粮收益](https://so.toutiao.com/search?keyword=媒体：加大政策支持保障种粮收益)
 1. [代表建议进一步改革完善年度体检](https://so.toutiao.com/search?keyword=代表建议进一步改革完善年度体检)
 1. [专家谈俄导弹落在泽连斯基车队附近](https://so.toutiao.com/search?keyword=专家谈俄导弹落在泽连斯基车队附近)
-1. [雷军：为小米汽车上市做最后冲刺](https://so.toutiao.com/search?keyword=雷军：为小米汽车上市做最后冲刺)
 1. [李稻葵：产假延到2年会致女性就业难](https://so.toutiao.com/search?keyword=李稻葵：产假延到2年会致女性就业难)
 1. [伊万科维奇：自豪执教国足](https://so.toutiao.com/search?keyword=伊万科维奇：自豪执教国足)
 1. [政协委员建议适度有序放开冻卵限制](https://so.toutiao.com/search?keyword=政协委员建议适度有序放开冻卵限制)
